Here are some changes: - Removed the 'GeoLocation' tool. - Removed subscribe button. - Optimised for pc, laptop, tab, etc. - Added some animation  to make it more interactive. - Fixed a bug that caused the website not to load properly on mobile devices. - Improved responsiveness of images and texts.

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,8 +1,7 @@
 body {
   background: black;
   color: #333;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  padding-top: 3%;
   margin: 0px;
   background-color: #000;
 }
@@ -16,10 +15,6 @@ body {
   --button-color: #404652;
   --button-border: #6B707C;
 }
-
-/*header {
-  background-image: url(https://fusionhubtool.github.io/Tools/Images/bgvideo.gif);
-}*/
 body {
   font-family: "Lato", sans-serif;
   transition: background-color .5s;
@@ -32,6 +27,10 @@ header{
   width: 100%;
   z-index: 1;
   background-color: rgb(5, 0, 0);
+  background-image: url("https://fusionhubtool.github.io/Tools/Images/bgvideo.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 30%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -67,12 +66,6 @@ header{
   right: 25px;
   font-size: 36px;
   margin-left: 50px;
-}
-
-#main{
-  transition: margin-left .5s;
-  padding: 0px;
-  padding-top: 60px;
 }
 
 @media screen and (max-height: 450px) {
@@ -172,11 +165,11 @@ article {
 
 article:hover {
   border-radius: 20px;
-  box-shadow: 20px 0px 30px 10px rgba(134, 253, 221, 0.507);
+  box-shadow: 0px 5px 20px 10px rgba(157, 248, 223, 0.358);
   font-family: Arial, sans-serif;
   text-align: center;
   color: #000;
-  animation: gradient 3s ease-in-out infinite;
+  animation: gradient 5s ease-in-out infinite;
 }
 
 article img {
@@ -208,7 +201,16 @@ article a:hover {
   transition: .5s;
   color: black;
 }
-
+@media (min-width: 900px) {
+  article{
+    width: 48%;
+    margin: 1%;
+  }
+  .main{
+    display:flex;
+    flex-wrap: wrap;
+  }
+}
 .alert {
   text-align: center;
   padding: 30px;
